[tool.poetry]
name = "randtex"
version = "0.1.0"
description = ""
authors = ["Bill Tyros <me@strategineer.com>"]
readme = "README.md"
packages = [{include = "randtex"}]

[tool.poetry.dependencies]
python = "3.10.9"
omgifol = "^0.5.0"
PySimpleGUI = "^4.60.5"
colormath = "^3.0.0"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
Pillow = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"